# transcript

./: README.md  SETUP_GUIDE.md  SIMPLE_SETUP_GUIDE.md  structure.md
NewProjSTT/: README.md  direct-stt-proxy.js  index.html  package-lock.json  package.json  start-proxies.js  stt-proxy-10.js  stt-proxy-11.js  stt-proxy-12.js  stt-proxy-13.js  stt-proxy-14.js  stt-proxy-15.js  stt-proxy-16.js  stt-proxy-17.js  stt-proxy-18.js  stt-proxy-19.js  stt-proxy-2.js  stt-proxy-20.js  stt-proxy-21.js  stt-proxy-22.js  stt-proxy-23.js  stt-proxy-24.js  stt-proxy-25.js  stt-proxy-26.js  stt-proxy-27.js  stt-proxy-28.js  stt-proxy-29.js  stt-proxy-3.js  stt-proxy-30.js  stt-proxy-31.js  stt-proxy-4.js  stt-proxy-5.js  stt-proxy-6.js  stt-proxy-7.js  stt-proxy-8.js  stt-proxy-9.js  stt-proxy.js  transcript-viewer.html  update-proxies-opus.cjs
NewProjSTT/public/: audio-processor.js
NewProjSTT/src/: ASIOAudioManager.ts  App.tsx  AudioManager.ts  BackendAudioManager.ts  BackendAudioService.ts  WebSocketManager.ts  audioWorker.ts  audioWorkletProcessor.js  database.json  databaseService.ts  types.ts
NewProjSTT/src/components/: MicConfiguration.tsx  TranscriptHistoryViewer.tsx  TranscriptViewer.tsx
asio-bridge/: CMakeLists.txt  README.md  build.bat  package.json
asio-bridge-simple/: README.md  asio_bridge.cpp  build.bat
asio-bridge/src/: asio_manager.cpp  asio_manager.h  audio_processor.cpp  audio_processor.h  main.cpp  websocket_server.cpp  websocket_server.h
backend/: README.md  channelExtractor.js  oldserv.txt  package-lock.json  package.json  server.js
